--- a/Reaksa/Style/public/index.html
+++ b/Reaksa/Style/public/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="output.css">
     <title>Document</title>
 </head>
-<body>
-    <h1 class="text-center font-bold">Hello Css Style</h1>
+<body class="container ">
+    
+   
+    <div class="pt-10 p-2 bg-reaksa">
+         <!--Design Button for Follow -->
+        <button class="rounded-full bg-blue-500 text-indigo-100  py-2 px-8 text-sm">
+            Follow
+         </button>
+         <!--Using withe -->
+         <div class="mt-5 bg-indigo-300 text-xl text-center w-1/2 h-24 px-4 py-2">
+             Trust TEC
+         </div>
+         <div class="mt-5 bg-indigo-300 text-center  w-1/2 h-24 px-4 py-2 text-2xl">
+             Team Work
+         </div>
+    </div>
+
+
+
 </body>
 </html>
