--- a/Reaksa/Style/public/index.html
+++ b/Reaksa/Style/public/index.html
@@ -23,7 +23,9 @@
              Team Work
          </div>
     </div>
-
+    <div>
+        <h2>Test Git CLI in git hub</h2>
+    </div>
 
 
 </body>
